create github pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="mbr-section content5 cid-qPYGKojSzr mbr-parallax-background" id="content5-1">
+<section class="engine"><a href="https://mobirise.ws/l">free html site maker</a></section><section class="mbr-section content5 cid-qPYGKojSzr mbr-parallax-background" id="content5-1">
 
     
 
@@ -79,7 +79,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            <a href="assets/files/TIES .pdf">TIES</a>&nbsp;</h4>
+                            <a href="assets/files/TIES%20Chart.pdf">TIES</a>&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Technological and Entrepreneurship Space (TIES)<br>Is an innovative maker space established in 2015 to support the TIE program. Funding from a University SEED grant was provided to install rapid prototyping machines, a CNC mill, laser cutter, and other equipment to support the "making" of prototypes. Currently the TIES lab is supporting Senior projects, class Projects, and innovative student projects.&nbsp;<a href="assets/files/TIES%20Detail.pdf">Learn more...</a>
                         </p>
                     </div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            <a href="assets/files/CTC 112.pdf">CTC 112&nbsp;</a></h4>
+                            <a href="assets/files/CTC%20112%20Chart.pdf">CTC 112&nbsp;</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7"></p><p>Computer Integrated Manufacturing Laboratory (CIMS Laboratory) Is a state-of-the-art lab environment, which aims at providing students with advanced technologies and methodologies; an integrated view of engineering to execute engineering tasks.&nbsp;<a href="assets/files/CTC%20112%20Detail.pdf">Learn more...</a>
                         </p><p></p>
                     </div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            <a href="assets/files/CS126.pdf">CS 126</a></h4>
+                            <a href="assets/files/CS126.pdf"></a><a href="assets/files/CS%20126%20Chart.pdf">CS 126</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             South Campus Labs support manufacturing and construction needs for all programs and activities, from core mechanical engineering classes to senior research and design projects.<a href="assets/files/CS%20127%20Detail.pdf">Learn more...</a>
                         </p>
