create github pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple website maker</a></section><section class="header12 cid-qQ0zNYG6cq mbr-fullscreen mbr-parallax-background" id="header12-7">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop web builder</a></section><section class="header12 cid-qQ0zNYG6cq mbr-fullscreen mbr-parallax-background" id="header12-7">
 
     
 
@@ -65,7 +65,7 @@
                             </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">
-                                <a href="https://rneal2.github.io/TIES/" class="text-white">Marketing</a>&nbsp;</h5>
+                                <a href="Marketing.html" class="text-white">Marketing</a>&nbsp;</h5>
                         </div>
 
                         <div class="card col-12 col-md-6 col-lg-4">
