create github pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop own website</a></section><section class="header12 cid-qQ0zNYG6cq mbr-fullscreen mbr-parallax-background" id="header12-7">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page creator</a></section><section class="header12 cid-qQ0zNYG6cq mbr-fullscreen mbr-parallax-background" id="header12-7">
 
     
 
@@ -75,7 +75,7 @@
                                 </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">
-                                Axcess&nbsp;</h5>
+                                Access&nbsp;</h5>
                         </div>
 
                         <div class="card col-12 col-md-6 col-lg-4">
