create github pages

--- a/Marketing.html
+++ b/Marketing.html
@@ -31,7 +31,7 @@
         <div class="media-container-column mbr-white col-md-8">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Marketing&nbsp;</h1>
             
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">Something interesting came out of our study, when we were going through our project we noticed that a handful of students went off campus to work on their projects. When looked into this, the overwhelming reason we found was that students were unaware that Pacific had the equipment that they were looking for.&nbsp;<br><br>We developed a website for the TIES lab, to help get the word out about the possibilities on campus. In the website we list out all the equipment avilable to students and what it does, list out the limitations on some machines, the open hours of the lab, and much more. See the link below to check it out!</p>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">Something interesting came out of our study, when we were going through our project we noticed that a handful of students went off campus to work on their projects. When looked into this, the overwhelming reason we found was that students were unaware that Pacific had the equipment that they were looking for.&nbsp;<br><br>We developed a website for the TIES lab. This template can be applied to the additional manufacturing labs on campus to help get the word out about the possibilities on campus. In the website we list out all the equipment avilable to students and what it does, list out the limitations on some machines, the open hours of the lab, and much more. See the link below to check it out!</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://rneal2.github.io/TIES/">TIES Website&nbsp;</a></div>
         </div>
     </div>
@@ -40,7 +40,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.ws/k">how to develop own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
